added fill_db script

--- a/assets/scss/_legacy.scss
+++ b/assets/scss/_legacy.scss
@@ -163,7 +163,7 @@ body {
     height: 45px;
     left: 0;
     margin-top: 20px;
-    background: url(/img/logo__sasp.png) center 0 no-repeat;
+    background: url('../img/logo__sasp.png') center 0 no-repeat;
 
     @media screen and (max-width: 576px) {
         display: none;
@@ -623,7 +623,7 @@ body {
     position: absolute;
     width: 85px;
     height: 45px;
-    background: url(/img/logo__sasp_grey.png) center 0 no-repeat;
+    background: url('../img/logo__sasp_grey.png') center 0 no-repeat;
     margin-left: -5px;
 
 }
@@ -666,7 +666,7 @@ body {
     position: absolute;
     width: 85px;
     height: 45px;
-    background: url(/img/spks_logo.png) center 0 no-repeat;
+    background: url('../img/spks_logo.png') center 0 no-repeat;
     margin-left: -20px;
 }
 
@@ -749,7 +749,7 @@ body {
     position: absolute;
     width: 85px;
     height: 45px;
-    background: url(/img/logo__sasp_grey.png) center 0 no-repeat;
+    background: url('../img/logo__sasp_grey.png') center 0 no-repeat;
     margin-left: -5px;
 
     @media screen and (max-width: 320px) {
@@ -830,7 +830,7 @@ body {
     position: absolute;
     width: 85px;
     height: 45px;
-    background: url(/img/spks_logo.png) center 0 no-repeat;
+    background: url('../img/spks_logo.png') center 0 no-repeat;
     margin-left: -20px;
 
     @media screen and (max-width: 320px) {
