--- a/mainapp/templates/mainapp/includes/content.html
+++ b/mainapp/templates/mainapp/includes/content.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div class="box__content">
     <div class="container">
         <div class="row">
@@ -37,32 +38,32 @@
                     </p>
                     <main role="main">
                         <p class="imglist d-flex">
-                            <a href="/img/img_at.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                <img src="/img/img_at.jpg" class="img-fluid">
+                            <a href="{% static 'img/img_at.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                <img src="{% static 'img/img_at.jpg' %}" class="img-fluid">
                             </a>
-                            <a href="/img/img_at2.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                <img src="/img/img_at2.jpg" class="img-fluid">
+                            <a href="{% static 'img/img_at2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                <img src="{% static 'img/img_at2.jpg' %}" class="img-fluid">
                             </a>
-                            <a href="/img/img_at2.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                <img src="/img/img_at2.jpg" class="img-fluid">
+                            <a href="{% static 'img/img_at2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                <img src="{% static 'img/img_at2.jpg' %}" class="img-fluid">
                             </a>
-                            <a href="/img/img_at2.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                <img src="/img/img_at2.jpg" class="img-fluid">
+                            <a href="{% static 'img/img_at2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                <img src="{% static 'img/img_at2.jpg' %}" class="img-fluid">
                             </a>
-                            <a href="/img/img_at2.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                <img src="/img/img_at2.jpg" class="img-fluid">
+                            <a href="{% static 'img/img_at2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                <img src="{% static 'img/img_at2.jpg' %}" class="img-fluid">
                             </a>
-                            <a href="/img/img_at2.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                <img src="/img/img_at2.jpg" class="img-fluid">
+                            <a href="{% static 'img/img_at2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                <img src="{% static 'img/img_at2.jpg' %}" class="img-fluid">
                             </a>
-                            <a href="/img/img_at2.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                <img src="/img/img_at2.jpg" class="img-fluid">
+                            <a href="{% static 'img/img_at2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                <img src="{% static 'img/img_at2.jpg' %}" class="img-fluid">
                             </a>
                         </p>
                     </main>
                     <div class="link__read__more">
                         <a href="center.html" class="read__more__link">
-                            Подробнее об организации <img src="/img/arrow__next.png" alt="">
+                            Подробнее об организации <img src="{% static 'img/arrow__next.png' %}" alt="">
                         </a>
                     </div>
                 </div>
@@ -137,7 +138,7 @@
                     <p class="">Новости</p>
                     <div class="link__read__news">
                         <a href="all-news.html" class="news__more__link">
-                            Ко всем новостям <img src="/img/arrow__next.png" alt="">
+                            Ко всем новостям <img src="{% static 'img/arrow__next.png' %}" alt="">
                         </a>
                     </div>
                 </div>
@@ -240,7 +241,7 @@
                     </div>
                     <div class="search__info__box">
                         <p class="search__text__box d-inline-block">Сервис поиска работы <br> в области сварки</p>
-                        <a href="http://www.bewelder.ru" target="_blank" class="search__work__link d-inline-block">Найти работу <img src="/img/arrow__next.png"
+                        <a href="http://www.bewelder.ru" target="_blank" class="search__work__link d-inline-block">Найти работу <img src="{% static 'img/arrow__next.png' %}"
                                 alt=""></a>
                         <a href="http://www.bewelder.ru" target="_blank">
                             <p class="search__text__box">www.bewelder.ru</p>
