--- a/mainapp/templates/mainapp/includes/footer.html
+++ b/mainapp/templates/mainapp/includes/footer.html
@@ -1,9 +1,10 @@
+{% load static %}
 <div class="footer__block">
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-xl-4">
                 <div class="footer__logo">
-                    <img src="/img/logo_footer.png" alt="">
+                    <img src="{% static 'img/logo_footer.png' %}" alt="">
                 </div>
                 <p class="footer__naks__text">
                     Организация является членом Саморегулируемая <br> организация Ассоциация «НАКС».
