--- a/mainapp/templates/mainapp/all-news.html
+++ b/mainapp/templates/mainapp/all-news.html
@@ -1,51 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'mainapp/base.html' %}
+{% load static %}
 
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Аттестационный центр НАКС Стандарт-Диагностик</title>
-
-    <!-- BOOTS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-
-    <!-- SCRIPT -->
-    <script src="js/w3.js"></script>
-    <!-- END SCRIPT -->
-
-    <!-- <link rel="stylesheet" href="fonts/font.css"> -->
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-
-
-
-    <!-- HEADER -->
-</head>
-
-<body>
-
-    <!-- Include Modal -->
-    <div w3-include-html="includes/modal-window.html"></div>
-    <!-- End Include Modal -->
-
-    <!-- Include HEADER -->
-    <div w3-include-html="includes/header.html"></div>
-    <!-- End Include HEADER -->
-
-    <!-- Include menu -->
-    <div w3-include-html="includes/menu.html"></div>
-    <!-- End Include menu -->
 
     <div class="container">
 
         <button class="back__to__main">
-            <a href="index.html"> <img src="/img/back__arrow-01.png" class="arrow__back__to__main text-align-center"
+            <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
                     alt="">
                 На главную</a>
         </button>
@@ -207,7 +167,7 @@
         <div class="line__otstup__inside__pages"></div>
 
         <button class="back__to__main">
-            <a href="index.html"> <img src="/img/back__arrow-01.png" class="arrow__back__to__main text-align-center"
+            <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
                     alt="">
                 На главную</a>
         </button>
