--- a/mainapp/templates/mainapp/includes/modal-window.html
+++ b/mainapp/templates/mainapp/includes/modal-window.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- Модальное окно - Оставить заявку -->
 <div class="modal fade" id="modal-statement" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
@@ -13,7 +14,7 @@
                     </div>
                 </div>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true"><img src="/img/close2.png" title="Закрыть окно" alt=""></span>
+                    <span aria-hidden="true"><img src="{% static 'img/close2.png' %}" title="Закрыть окно" alt=""></span>
                 </button>
             </div>
 
