added main page controller

--- a/mainapp/templates/mainapp/includes/content.html
+++ b/mainapp/templates/mainapp/includes/content.html
@@ -145,61 +145,11 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xl-3">
-                <div class="block__news">
-                    <a href="news.html" class="link__news">
-                        <div class="box__news">
-                            <p class="data__news__main">25 Декабря 2018</p>
-                            <p class="box__news__text">
-                                Соглашение о сотрудничестве между Саморегулируемой организацией Ассоциация
-                                "Национальное Агентство Контроля Сварки" и Ассоциацией производителей качественной продукции
-                            </p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-xl-3">
-                <div class="block__news">
-                    <a href="news-no-image.html" class="link__news">
-                        <div class="box__news">
-                            <p class="data__news__main">25 Декабря 2018</p>
-                            <p class="box__news__text">
-                                Соглашение о сотрудничестве между Саморегулируемой организацией Ассоциация
-                                "Национальное Агентство Контроля Сварки" и Ассоциацией производителей качественной продукции
-                            </p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-xl-3">
-                <div class="block__news">
-                    <a href="news.html" class="link__news">
-                        <div class="box__news">
-                            <p class="data__news__main">25 Декабря 2018</p>
-                            <p class="box__news__text">
-                                Соглашение о сотрудничестве между Саморегулируемой организацией Ассоциация
-                                "Национальное Агентство Контроля Сварки" и Ассоциацией производителей качественной продукции
-                            </p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-xl-3">
-                <div class="block__news">
-                    <a href="news.html" class="link__news">
-                        <div class="box__news">
-                            <p class="data__news__main">25 Декабря 2018</p>
-                            <p class="box__news__text">
-                                Соглашение о сотрудничестве между Саморегулируемой организацией Ассоциация
-                                "Национальное Агентство Контроля Сварки" и Ассоциацией производителей качественной продукции
-                            </p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-       
-        
-          
+
+            {% for post in posts %}
+            {% include 'mainapp/includes/news_horizontal.html' %}
+            {% endfor %}
+
         </div>
         <div class="row">
             <div class="col-xl-3">
