--- a/mainapp/templates/mainapp/includes/header.html
+++ b/mainapp/templates/mainapp/includes/header.html
@@ -3,7 +3,7 @@
         <div class="box__items">
         <div class="row align-items-center">
                 <div class="col-md-5 col-sm-5 col-xl-3">
-                        <a href="index.html">
+                        <a href="{% url 'main' %}">
                                 <img src="{% static 'img/logo.png' %}" class="header__logo" alt="">
                         </a>
                 </div>
