--- a/mainapp/templates/mainapp/includes/laboratoriya.html
+++ b/mainapp/templates/mainapp/includes/laboratoriya.html
@@ -1,51 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'mainapp/base.html' %}
+{% load static %}
 
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Аттестационный центр НАКС Стандарт-Диагностик</title>
-
-    <!-- BOOTS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-
-    <!-- SCRIPT -->
-    <script src="js/w3.js"></script>
-    <!-- END SCRIPT -->
-
-    <!-- <link rel="stylesheet" href="fonts/font.css"> -->
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-
-
-
-    <!-- HEADER -->
-</head>
-
-<body>
-
-    <!-- Include Modal -->
-    <div w3-include-html="includes/modal-window.html"></div>
-    <!-- End Include Modal -->
-
-    <!-- Include HEADER -->
-    <div w3-include-html="includes/header.html"></div>
-    <!-- End Include HEADER -->
-
-    <!-- Include menu -->
-    <div w3-include-html="includes/menu.html"></div>
-    <!-- End Include menu -->
+{% block content %}
 
     <div class="container">
 
         <button class="back__to__main">
-            <a href="index.html"> <img src="/img/back__arrow-01.png" class="arrow__back__to__main text-align-center"
+            <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
                     alt="">
                 На главную</a>
         </button>
@@ -153,11 +114,11 @@
                         </p>
                         <main role="main">
                             <p class="imglist d-flex">
-                                <a href="/img/img_ats9.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                    <img src="/img/img_ats9.jpg" class="img-fluid">
+                                <a href="{% static 'img/img_ats9.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                    <img src="{% static 'img/img_ats9.jpg' %}" class="img-fluid">
                                 </a>
-                                <a href="/img/img_ats8.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                    <img src="/img/img_ats8.jpg" class="img-fluid">
+                                <a href="{% static 'img/img_ats8.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                    <img src="{% static 'img/img_ats8.jpg' %}" class="img-fluid">
                                 </a>
 
                             </p>
@@ -167,11 +128,11 @@
                         </p>
                         <main role="main">
                             <p class="imglist d-flex">
-                                <a href="/img/img_ats1.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                    <img src="/img/img_ats1.jpg" class="img-fluid">
+                                <a href="{% static 'img/img_ats1.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                    <img src="{% static 'img/img_ats1.jpg' %}" class="img-fluid">
                                 </a>
-                                <a href="/img/img_ats2.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                    <img src="/img/img_ats2.jpg" class="img-fluid">
+                                <a href="{% static 'img/img_ats2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                    <img src="{% static 'img/img_ats2.jpg' %}" class="img-fluid">
                                 </a>
 
                             </p>
@@ -181,20 +142,20 @@
                         </p>
                         <main role="main">
                             <p class="imglist d-flex">
-                                <a href="/img/img_ats7.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                    <img src="/img/img_ats7.jpg" class="img-fluid">
+                                <a href="{% static 'img/img_ats7.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                    <img src="{% static 'img/img_ats7.jpg' %}" class="img-fluid">
                                 </a>
-                                <a href="/img/img_ats6.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                    <img src="/img/img_ats6.jpg" class="img-fluid">
+                                <a href="{% static 'img/img_ats6.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                    <img src="{% static 'img/img_ats6.jpg' %}" class="img-fluid">
                                 </a>
-                                <a href="/img/img_ats5.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                    <img src="/img/img_ats5.jpg" class="img-fluid">
+                                <a href="{% static 'img/img_ats5.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                    <img src="{% static 'img/img_ats5.jpg' %}" class="img-fluid">
                                 </a>
-                                <a href="/img/img_ats4.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                    <img src="/img/img_ats4.jpg" class="img-fluid">
+                                <a href="{% static 'img/img_ats4.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                    <img src="{% static 'img/img_ats4.jpg' %}" class="img-fluid">
                                 </a>
-                                <a href="/img/img_ats3.jpg" class="img_box" data-fancybox="group1" data-type="image">
-                                    <img src="/img/img_ats3.jpg" class="img-fluid">
+                                <a href="{% static 'img/img_ats3.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                    <img src="{% static 'img/img_ats3.jpg' %}" class="img-fluid">
                                 </a>
 
                             </p>
@@ -239,38 +200,10 @@
         <div class="line__otstup__inside__pages"></div>
 
         <button class="back__to__main">
-            <a href="index.html"> <img src="/img/back__arrow-01.png" class="arrow__back__to__main text-align-center"
+            <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
                     alt="">
                 На главную</a>
         </button>
         <div class="line__otstup__inside__pages"></div>
     </div>
-
-    <!-- End Include footer -->
-    <div w3-include-html="includes/footer.html"></div>
-    <!-- End Include footer -->
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-        crossorigin="anonymous"></script>
-
-    <script src="js/script.js"></script>
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/jquery.fancybox.js"></script>
-    <script src="/js/jquery.maskedinput.js"></script>
-    <script src="/js/jquery.maskedinput.min.js"></script>
-
-
-    <script>
-        w3.includeHTML();
-    </script>
-    <script>
-        $(document).ready(function () {
-            $("body").css("opacity", "1");
-        });
-    </script>
-</body>
-
-</html>
+{% endblock  %}
