changes of main page

--- a/mainapp/templates/mainapp/includes/content.html
+++ b/mainapp/templates/mainapp/includes/content.html
@@ -71,61 +71,7 @@
 
 
             <div class="col-xl-5">
-                <div class="header__name">
-                    <p class="">Услуги центра</p>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 col-xl-12">
-                        <div class="button__services">
-                            <a href="svarshik-specialist.html">
-                                <div class="box__service">
-                                    <p class="services__name">Аттестация сварщиков <br>
-                                        и специалистов сварочного производства</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-12">
-                        <div class="button__services">
-                            <a href="laboratoriya.html">
-                                <div class="box__service">
-                                    <p class="services__name">Лаборатория разрушающего <br>
-                                        и неразрушающего контроля</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-12">
-                        <div class="button__services">
-                            <a href="">
-                                <div class="box__service">
-                                    <p class="services__name">Аттестация технологий <br>
-                                        сварки</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-6">
-                        <div class="button__services">
-                            <a href="">
-                                <div class="box__service">
-                                    <p class="services__name">Аттестация сварочных <br>
-                                        материалов</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-6">
-                        <div class="button__services">
-                            <a href="">
-                                <div class="box__service">
-                                    <p class="services__name">Аттестация сварочного <br>
-                                        оборудования</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+                {% include 'mainapp/includes/services_menu.html' %}
             </div>
 
 
