--- a/mainapp/templates/mainapp/includes/svarshik-specialist.html
+++ b/mainapp/templates/mainapp/includes/svarshik-specialist.html
@@ -1,9 +1,11 @@
+{% extends 'mainapp/base.html' %}
 {% load static %}
+{% load link_holders %}
 {% block content %}
     <div class="container">
 
         <button class="back__to__main">
-            <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
+            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
                     alt="">
                 На главную</a>
         </button>
@@ -93,34 +95,8 @@
 
             <div class="col-xl-2">
 
-                <div class="sider__bar__service__pages">
-                    <p class="trebovanie__left__column">
-                        Требования к аттестации:
-                    </p>
-                    <a href="" class="trebovanie__list">
-                        <p>
-                            • ПБ 03-273-99</p>
-                    </a>
-                    <a href="" class="trebovanie__list">
-                        <p>
-                            • РД 03-495-02</p>
-                    </a>
-                    <p class="right__column__header">
-                        Подать заявку на аттестацию:
-                    </p>
-                    <div class="list__service__column">
-                        <p class="small__column__text"><a href=""> Аттестация сварщиков
-                                и специалистов сварочного производства</a></p>
-                        <p class="small__column__text"><a href=""> Лаборатория разрушающего
-                                и неразрушающего контроля</a></p>
-                        <p class="small__column__text"><a href=""> Аттестация технологий
-                                сварки</a></p>
-                        <p class="small__column__text"><a href=""> Аттестация сварочного
-                                оборудования</a></p>
-                        <p class="small__column__text"><a href=""> Аттестация сварочных материалов</a></p>
-
-                    </div>
-                </div>
+               {% include 'mainapp/includes/side_panel_links.html' %} 
+            
             </div>
 
         </div>
@@ -129,7 +105,7 @@
         <div class="line__otstup__inside__pages"></div>
 
         <button class="back__to__main">
-            <a href="index.html"> <img src="/img/back__arrow-01.png" class="arrow__back__to__main text-align-center"
+            <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
                     alt="">
                 На главную</a>
         </button>
