add changes, url codes, link_holders etc

--- a/mainapp/templates/mainapp/center_new.html
+++ b/mainapp/templates/mainapp/center_new.html
@@ -1,7 +1,7 @@
   <div class="container">
 
     <button class="back__to__main">
-      <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center" alt="">
+      <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center" alt="">
         На главную</a>
     </button>
 
@@ -17,7 +17,7 @@
         <p class="small__header__pages">
           Аккредитовано в установленном порядке и обладает Аттестатами соответствия и Свидетельствами о допуске к
           осуществлению деятельности по аттестации. Общество с ограниченной ответственностью Аттестационный и сертификационный центр «Инженерный и
-          технологический сервис сварочного производства» (ООО АЦ «НАКС Стандарт-Диагностик», г. Москва, далее Центр)
+          технологический сервис сварочного производства» (ООО «НАКС Стандарт-Диагностика», г. Москва, далее Центр)
           проводит аттестацию по таким услугами как:
         </p>
         <div class="box__info__text__small">
@@ -130,7 +130,7 @@
     <div class="line__otstup__inside__pages"></div>
 
     <button class="back__to__main">
-      <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center" alt="">
+      <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center" alt="">
         На главную</a>
     </button>
     <div class="line__otstup__inside__pages"></div>
