--- a/mainapp/templates/mainapp/includes/background-block.html
+++ b/mainapp/templates/mainapp/includes/background-block.html
@@ -4,7 +4,7 @@
             <div class="row justify-content-center">
                 <div class="col-xl-12">
                     <div class="bg__text">
-                        <p class="bg__text__head">АЦ НАКС Стандарт-Диагностик</p>
+                        <p class="bg__text__head">АЦ НАКС Стандарт-Диагностика</p>
                         <p class="bg__text__small">Центр осуществляет аттестационную деятельность в рамках Системы
                             аттестации сварочного производства <br> Ростехнадзора (САСв Ростехнадзора), независимую
                             оценку
