--- a/mainapp/templates/mainapp/includes/laboratoriya.html
+++ b/mainapp/templates/mainapp/includes/laboratoriya.html
@@ -6,7 +6,7 @@
     <div class="container">
 
         <button class="back__to__main">
-            <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
+            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
                     alt="">
                 На главную</a>
         </button>
@@ -177,7 +177,7 @@
         <div class="line__otstup__inside__pages"></div>
 
         <button class="back__to__main">
-            <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
+            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
                     alt="">
                 На главную</a>
         </button>
