--- a/mainapp/templates/mainapp/includes/menu.html
+++ b/mainapp/templates/mainapp/includes/menu.html
@@ -67,6 +67,8 @@
                 </li>
               </ul>
 
+            <a href="{% url 'profstandard' %}#page-top" class="btn btn-success btn-sm">Профстандарты в сварке</a>
+
             </div>
             <div class="system__button">
               <a href="https://ac.naks.ru/" class="enter__system">Войти в систему</a>
