--- a/mainapp/templates/mainapp/includes/side_panel_links.html
+++ b/mainapp/templates/mainapp/includes/side_panel_links.html
@@ -3,11 +3,11 @@
                     <p class="trebovanie__left__column">
                         Требования к аттестации:
                     </p>
-                    <a href="" class="trebovanie__list">
+                    <a data-info="PB_273" href="{% link_holder 'PB_273' %}" class="trebovanie__list">
                         <p>
                             • ПБ 03-273-99</p>
                     </a>
-                    <a href="" class="trebovanie__list">
+                    <a data-info="RD_495" href="{% link_holder 'RD_495' %}" class="trebovanie__list">
                         <p>
                             • РД 03-495-02</p>
                     </a>
