--- a/mainapp/templates/mainapp/all-news.html
+++ b/mainapp/templates/mainapp/all-news.html
@@ -1,204 +1,38 @@
 {% extends 'mainapp/base.html' %}
 {% load static %}
 
+{% block content %}
 
-    <div class="container">
+<div class="container">
 
-        <button class="back__to__main">
-            <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
-                    alt="">
-                На главную</a>
-        </button>
+    <button class="back__to__main mt-3">
+        <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
+                alt="">
+            На главную</a>
+    </button>
 
 
-        <div class="row">
-            <div class="col-xl-2">
-                <div class="header__inside__pages">Все новости</div>
+    <div class="row">
+        <div class="col-xl-2">
+            <div class="header__inside__pages">Все новости</div>
+        </div>
+
+            <div class="col-xl-10">
+                <div class="row mt-4">
+                {% for post in news %}
+                    <div class="col-lg-4 mb-4">
+                        <div class="block__news">
+                            <a href="{% url 'detailview' 'post' post.pk %}#page-top" class="link__news">
+                                <div class="box__news">
+                                    <p class="data__news__main">{{ post.published_date|date:"d-m-Y" }}</p>
+                                    <p class="box__news__text">
+                                        {{ post.short_description }}
+                                    </p>
+                                </div>
+                        </div>
+                    </div>
+                {% endfor %}
+                </div>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xl-2"></div>
-            <div class="col-xl-3">
-                                <div class="block__news">
-                    <a href="news.html" class="link__news">
-                        <div class="box__news">
-                            <p class="data__news__main">25 Декабря 2018</p>
-                            <p class="box__news__text">
-                                Соглашение о сотрудничестве между Саморегулируемой организацией Ассоциация
-                                "Национальное Агентство Контроля Сварки" и Ассоциацией производителей качественной
-                                продукции
-                            </p>
-                        </div>
-                    </a>
-                </div>
-                 <div class="line__otstup__inside__pages__news"></div>
-                <div class="block__news">
-                    <a href="news.html" class="link__news">
-                        <div class="box__news">
-                            <p class="data__news__main">25 Декабря 2018</p>
-                            <p class="box__news__text">
-                                Соглашение о сотрудничестве между Саморегулируемой организацией Ассоциация
-                                "Национальное Агентство Контроля Сварки" и Ассоциацией производителей качественной
-                                продукции
-                            </p>
-                        </div>
-                    </a>
-                </div>
-                 <div class="line__otstup__inside__pages__news"></div>
-                <div class="block__news">
-                    <a href="news.html" class="link__news">
-                        <div class="box__news">
-                            <p class="data__news__main">25 Декабря 2018</p>
-                            <p class="box__news__text">
-                                Соглашение о сотрудничестве между Саморегулируемой организацией Ассоциация
-                                "Национальное Агентство Контроля Сварки" и Ассоциацией производителей качественной
-                                продукции
-                            </p>
-                        </div>
-                    </a>
-                </div>
-                <div class="line__otstup__inside__pages__news"></div>
-            </div> 
-            <div class="line__otstup__inside__pages__news"></div>          
-            <div class="col-xl-3">
-                <div class="block__news">
-                    <a href="news.html" class="link__news">
-                        <div class="box__news">
-                            <p class="data__news__main">25 Декабря 2018</p>
-                            <p class="box__news__text">
-                                Соглашение о сотрудничестве между Саморегулируемой организацией Ассоциация
-                                "Национальное Агентство Контроля Сварки" и Ассоциацией производителей качественной
-                                продукции
-                            </p>
-                        </div>
-                    </a>
-                </div>
-                 <div class="line__otstup__inside__pages__news"></div>
-                <div class="block__news">
-                    <a href="news.html" class="link__news">
-                        <div class="box__news">
-                            <p class="data__news__main">25 Декабря 2018</p>
-                            <p class="box__news__text">
-                                Соглашение о сотрудничестве между Саморегулируемой организацией Ассоциация
-                                "Национальное Агентство Контроля Сварки" и Ассоциацией производителей качественной
-                                продукции
-                            </p>
-                        </div>
-                    </a>
-                </div>
-                 <div class="line__otstup__inside__pages__news"></div>
-                <div class="block__news">
-                    <a href="news.html" class="link__news">
-                        <div class="box__news">
-                            <p class="data__news__main">25 Декабря 2018</p>
-                            <p class="box__news__text">
-                                Соглашение о сотрудничестве между Саморегулируемой организацией Ассоциация
-                                "Национальное Агентство Контроля Сварки" и Ассоциацией производителей качественной
-                                продукции
-                            </p>
-                        </div>
-                    </a>
-                </div>
-                <div class="line__otstup__inside__pages__news"></div>
-            </div>              
-                     
-            <div class="col-xl-3">
-                <div class="block__news">
-                    <a href="news.html" class="link__news">
-                        <div class="box__news">
-                            <p class="data__news__main">25 Декабря 2018</p>
-                            <p class="box__news__text">
-                                Соглашение о сотрудничестве между Саморегулируемой организацией Ассоциация
-                                "Национальное Агентство Контроля Сварки" и Ассоциацией производителей качественной
-                                продукции
-                            </p>
-                        </div>
-                    </a>
-                </div>
-                 <div class="line__otstup__inside__pages__news"></div>
-                <div class="block__news">
-                    <a href="news.html" class="link__news">
-                        <div class="box__news">
-                            <p class="data__news__main">25 Декабря 2018</p>
-                            <p class="box__news__text">
-                                Соглашение о сотрудничестве между Саморегулируемой организацией Ассоциация
-                                "Национальное Агентство Контроля Сварки" и Ассоциацией производителей качественной
-                                продукции
-                            </p>
-                        </div>
-                    </a>
-                </div>
-                 <div class="line__otstup__inside__pages__news"></div>
-                <div class="block__news">
-                    <a href="news.html" class="link__news">
-                        <div class="box__news">
-                            <p class="data__news__main">25 Декабря 2018</p>
-                            <p class="box__news__text">
-                                Соглашение о сотрудничестве между Саморегулируемой организацией Ассоциация
-                                "Национальное Агентство Контроля Сварки" и Ассоциацией производителей качественной
-                                продукции
-                            </p>
-                        </div>
-                    </a>
-                </div>
-                <nav aria-label="Page navigation example">
-                        <ul class="pagination justify-content-end">
-                          <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1">Назад</a>
-                          </li>
-                          <li class="page-item"><a class="page-link" href="all-news.html#all-news">1</a></li>
-                          <li class="page-item"><a class="page-link" href="#">2</a></li>
-                          <li class="page-item"><a class="page-link" href="#">3</a></li>
-                          <li class="page-item"><a class="page-link" href="#">4</a></li>
-                          <li class="page-item"><a class="page-link" href="#">5</a></li>
-                          <li class="page-item">
-                            <a class="page-link" href="#">Вперед</a>
-                          </li>
-                        </ul>
-                      </nav>
-            </div>                       
-        </div>
-        
-
-
-
-
-        <div class="line__otstup__inside__pages"></div>
-
-        <button class="back__to__main">
-            <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
-                    alt="">
-                На главную</a>
-        </button>
-        <div class="line__otstup__inside__pages"></div>
     </div>
-
-    <!-- End Include footer -->
-    <div w3-include-html="includes/footer.html"></div>
-    <!-- End Include footer -->
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-        crossorigin="anonymous"></script>
-
-    <script src="js/script.js"></script>
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/jquery.fancybox.js"></script>
-    <script src="/js/jquery.maskedinput.js"></script>
-    <script src="/js/jquery.maskedinput.min.js"></script>
-
-
-    <script>
-        w3.includeHTML();
-    </script>
-    <script>
-        $(document).ready(function () {
-            $("body").css("opacity", "1");
-        });
-    </script>
-</body>
-
-</html>
+    {% endblock %}
