--- a/mainapp/templates/mainapp/news-no-image.html
+++ b/mainapp/templates/mainapp/news-no-image.html
@@ -45,7 +45,7 @@
     <div class="container">
 
         <button class="back__to__main">
-            <a href="index.html"> <img src="/img/back__arrow-01.png" class="arrow__back__to__main text-align-center"
+            <a href="{% url 'main' %}"> <img src="/img/back__arrow-01.png" class="arrow__back__to__main text-align-center"
                     alt="">
                 На главную</a>
         </button>
@@ -163,7 +163,7 @@
         <div class="line__otstup__inside__pages"></div>
 
         <button class="back__to__main">
-            <a href="index.html"> <img src="/img/back__arrow-01.png" class="arrow__back__to__main text-align-center"
+            <a href="{% url 'main' %}"> <img src="/img/back__arrow-01.png" class="arrow__back__to__main text-align-center"
                     alt="">
                 На главную</a>
         </button>
