--- a/mainapp/templates/mainapp/news-no-image_new.html
+++ b/mainapp/templates/mainapp/news-no-image_new.html
@@ -45,7 +45,7 @@
     <div class="container">
 
         <button class="back__to__main">
-            <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
+            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
                     alt="">
                 На главную</a>
         </button>
@@ -149,21 +149,18 @@
                         </a>
                     </div>
                     <div class="link__read__news__inside">
-                            <a href="all-news.html" class="news__more__link">
+                            <a href="{% url 'news' %}" class="news__more__link">
                                 Ко всем новостям <img src="{% static 'img/arrow__next.png' %}" alt="">
                             </a>
-                        </div>      
-                </div>                   
-           
-            
-              
+                        </div>
+                </div>
             </div>
 
 
         <div class="line__otstup__inside__pages"></div>
 
         <button class="back__to__main">
-            <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
+            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
                     alt="">
                 На главную</a>
         </button>
