--- a/mainapp/templates/mainapp/profstandarti_new.html
+++ b/mainapp/templates/mainapp/profstandarti_new.html
@@ -1,51 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'mainapp/base.html' %}
+{% load static %}
+{% load link_holders %}
+{% block content %}
 
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Аттестационный центр НАКС Стандарт-Диагностик</title>
-
-    <!-- BOOTS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-
-    <!-- SCRIPT -->
-    <script src="js/w3.js"></script>
-    <!-- END SCRIPT -->
-
-    <!-- <link rel="stylesheet" href="fonts/font.css"> -->
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-
-
-
-    <!-- HEADER -->
-</head>
-
-<body>
-
-    <!-- Include Modal -->
-    <div w3-include-html="includes/modal-window.html"></div>
-    <!-- End Include Modal -->
-
-    <!-- Include HEADER -->
-    <div w3-include-html="includes/header.html"></div>
-    <!-- End Include HEADER -->
-
-    <!-- Include menu -->
-    <div w3-include-html="includes/menu.html"></div>
-    <!-- End Include menu -->
-
-    <div class="container">
+    <div class="container" id="page-top">
 
         <button class="back__to__main">
-            <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
+            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
                     alt=""> На главную</a>
         </button>
 
@@ -54,255 +15,60 @@
             <div class="col-xl-2">
                 <div class="header__inside__pages" id="political">Профстандарты <br>в области сварки</div>
             </div>
-            <div class="col-xl-4">
-                <div class="box__standart">
-                    <p class="header__standart">
-                        Профессиональный стандарт №1
-                    </p>
-                    <p class="name__standart">
-                        Сварщик
-                    </p>
-                    <p class="info__standart">
-                        Информация о стандарте
-                    </p>
-                    <p class="number__standart">
-                        Код: 40.002
-                    </p>
-                    <p class="info__standart">
-                        Регистрационный номер
-                    </p>
-                    <p class="number__standart">
-                        №14
-                    </p>
-                    <p class="info__standart">
-                        Приказ Минтруда России № 701н от 28.11.2013 г., зарегистрирован Минюстом России 13.02.2014г.,
-                        рег. № 31301
-                    </p>
-                    <button class="download__standart">
-                        <a href="#" class="button__standart" download="">Скачать</a>
-                    </button>
+            <div class="col-xl-8">
+                <div class="row">
+                {% for ps in profstandards %}
+                    <div class="col-lg-6">
+                        <div class="box__standart">
+                            <p class="header__standart">
+                                Профессиональный стандарт №{{ forloop.counter }}
+                            </p>
+                            <p class="name__standart">
+                                {{ ps.title }}
+                            </p>
+                            <p class="info__standart">
+                                Информация о стандарте
+                            </p>
+                            <p class="number__standart">
+                                Код: {{ ps.ps_code }}
+                            </p>
+                            <p class="info__standart">
+                                Регистрационный номер
+                            </p>
+                            <p class="number__standart">
+                                {{ ps.reg_number }}
+                            </p>
+                            <p class="info__standart">
+                                {{ ps.mintrud_reg }}
+                            </p>
+                            <button class="download__standart">
+                                <a href="{{ ps.document.url }}" class="button__standart" download="">Скачать</a>
+                            </button>
+                        </div>
+                    </div>
+                {% endfor %}
                 </div>
-                <div class="box__standart">
-                    <p class="header__standart">
-                        Профессиональный стандарт №1
-                    </p>
-                    <p class="name__standart">
-                        Сварщик
-                    </p>
-                    <p class="info__standart">
-                        Информация о стандарте
-                    </p>
-                    <p class="number__standart">
-                        Код: 40.002
-                    </p>
-                    <p class="info__standart">
-                        Регистрационный номер
-                    </p>
-                    <p class="number__standart">
-                        №14
-                    </p>
-                    <p class="info__standart">
-                        Приказ Минтруда России № 701н от 28.11.2013 г., зарегистрирован Минюстом России 13.02.2014г.,
-                        рег. № 31301
-                    </p>
-                    <button class="download__standart">
-                        <a href="#" class="button__standart" download="">Скачать</a>
-                    </button>
-                </div>
-                <div class="box__standart">
-                    <p class="header__standart">
-                        Профессиональный стандарт №1
-                    </p>
-                    <p class="name__standart">
-                        Сварщик
-                    </p>
-                    <p class="info__standart">
-                        Информация о стандарте
-                    </p>
-                    <p class="number__standart">
-                        Код: 40.002
-                    </p>
-                    <p class="info__standart">
-                        Регистрационный номер
-                    </p>
-                    <p class="number__standart">
-                        №14
-                    </p>
-                    <p class="info__standart">
-                        Приказ Минтруда России № 701н от 28.11.2013 г., зарегистрирован Минюстом России 13.02.2014г.,
-                        рег. № 31301
-                    </p>
-                    <button class="download__standart">
-                        <a href="#" class="button__standart" download="">Скачать</a>
-                    </button>
-                </div>
-                <div class="box__standart">
-                    <p class="header__standart">
-                        Профессиональный стандарт №1
-                    </p>
-                    <p class="name__standart">
-                        Сварщик
-                    </p>
-                    <p class="info__standart">
-                        Информация о стандарте
-                    </p>
-                    <p class="number__standart">
-                        Код: 40.002
-                    </p>
-                    <p class="info__standart">
-                        Регистрационный номер
-                    </p>
-                    <p class="number__standart">
-                        №14
-                    </p>
-                    <p class="info__standart">
-                        Приказ Минтруда России № 701н от 28.11.2013 г., зарегистрирован Минюстом России 13.02.2014г.,
-                        рег. № 31301
-                    </p>
-                    <button class="download__standart">
-                        <a href="#" class="button__standart" download="">Скачать</a>
-                    </button>
-                </div>
+
             </div>
-            <div class="col-xl-4">
-                <div class="box__standart">
-                    <p class="header__standart">
-                        Профессиональный стандарт №1
-                    </p>
-                    <p class="name__standart">
-                        Сварщик
-                    </p>
-                    <p class="info__standart">
-                        Информация о стандарте
-                    </p>
-                    <p class="number__standart">
-                        Код: 40.002
-                    </p>
-                    <p class="info__standart">
-                        Регистрационный номер
-                    </p>
-                    <p class="number__standart">
-                        №14
-                    </p>
-                    <p class="info__standart">
-                        Приказ Минтруда России № 701н от 28.11.2013 г., зарегистрирован Минюстом России 13.02.2014г.,
-                        рег. № 31301
-                    </p>
-                    <button class="download__standart">
-                        <a href="#" class="button__standart" download="">Скачать</a>
-                    </button>
-                </div>
-                <div class="box__standart">
-                    <p class="header__standart">
-                        Профессиональный стандарт №1
-                    </p>
-                    <p class="name__standart">
-                        Сварщик
-                    </p>
-                    <p class="info__standart">
-                        Информация о стандарте
-                    </p>
-                    <p class="number__standart">
-                        Код: 40.002
-                    </p>
-                    <p class="info__standart">
-                        Регистрационный номер
-                    </p>
-                    <p class="number__standart">
-                        №14
-                    </p>
-                    <p class="info__standart">
-                        Приказ Минтруда России № 701н от 28.11.2013 г., зарегистрирован Минюстом России 13.02.2014г.,
-                        рег. № 31301
-                    </p>
-                    <button class="download__standart">
-                        <a href="#" class="button__standart" download="">Скачать</a>
-                    </button>
-                </div>
-                <div class="box__standart">
-                    <p class="header__standart">
-                        Профессиональный стандарт №1
-                    </p>
-                    <p class="name__standart">
-                        Сварщик
-                    </p>
-                    <p class="info__standart">
-                        Информация о стандарте
-                    </p>
-                    <p class="number__standart">
-                        Код: 40.002
-                    </p>
-                    <p class="info__standart">
-                        Регистрационный номер
-                    </p>
-                    <p class="number__standart">
-                        №14
-                    </p>
-                    <p class="info__standart">
-                        Приказ Минтруда России № 701н от 28.11.2013 г., зарегистрирован Минюстом России 13.02.2014г.,
-                        рег. № 31301
-                    </p>
-                    <button class="download__standart">
-                        <a href="#" class="button__standart" download="">Скачать</a>
-                    </button>
-                </div>
-               
-            </div>
+
             <div class="col-xl-2">
-                <div class="sider__bar">
-                    <p class="right__column__header">
-                        Подать заявку на аттестацию:
-                    </p>
-                 <div class="list__service__column">
-                        <p class="small__column__text"><a href=""> Аттестация сварщиков
-                                и специалистов сварочного производства</a></p>
-                        <p class="small__column__text"><a href=""> Лаборатория разрушающего 
-                                и неразрушающего контроля</a></p>
-                        <p class="small__column__text"><a href=""> Аттестация технологий 
-                                сварки</a></p>
-                        <p class="small__column__text"><a href=""> Аттестация сварочного 
-                                оборудования</a></p>
-                        <p class="small__column__text"><a href=""> Аттестация сварочных материалов</a></p>
-                        
-                 </div>
-                </div>
+
+                {% include 'mainapp/includes/side_panel_links.html' %}
             </div>
         </div>
 
         <div class="line__otstup__inside__pages"></div>
 
         <button class="back__to__main">
-            <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
+            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
                     alt=""> На главную</a>
         </button>
         <div class="line__otstup__inside__pages"></div>
     </div>
 
-    <!-- End Include footer -->
+    {% comment %} <!-- End Include footer -->
     <div w3-include-html="includes/footer.html"></div>
-    <!-- End Include footer -->
+    <!-- End Include footer --> {% endcomment %}
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-        crossorigin="anonymous"></script>
-
-    <script src="js/script.js"></script>
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/jquery.fancybox.js"></script>
-    <script src="/js/jquery.maskedinput.js"></script>
-    <script src="/js/jquery.maskedinput.min.js"></script>
-
-
-    <script>
-        w3.includeHTML();
-    </script>
-    <script>
-        $(document).ready(function () {
-            $("body").css("opacity", "1");
-        });
-    </script>
-</body>
-
-</html>
+{% endblock content %}
